diagnostics/tests/snapshots/utf8_boundary.snap
error[TEST0103]: inside utf8 char
 --> utf8.js:1:1
  |
1 | écho
  | ^ inside utf8 char
